@@ -1,5 +1,13 @@
 2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* configure.ac:
+	* tests/check/Makefile.am:
+	* tests/check/gnet/gnetconnhttp.c:
+	* tests/check/gnet/gnettcpsocket.c:
+	  Fix --disable-network-tests configure option.
+
+2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* src/inetaddr.c:
 	  Remove some now-unused structure members (of privat structure).
 
